--- a/style.css
+++ b/style.css
@@ -322,12 +322,30 @@ footer p{
     }
      .intro1-caption{
         margin: 20px;
-     }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 30px;
+        flex-wrap: wrap;
+        font-size: 13px;
+        }
 
+     .moji {
+        width: 100%;
+        margin-bottom: 20px;
+        line-height: 2;
+    }
+
+    .intro2 {
+        width: 100%;
+        margin-bottom: 20px;
+        line-height: 2;
+    }
      .intro_1 img {
         width: 200px;
-        
+        flex-wrap: wrap-reverse;
      }
+
 
      .intro_1 p {
         font-size: 13px;
@@ -353,4 +371,44 @@ footer p{
      .down-box2{
         display: block;
      }
-   }
+
+     .course_img {
+        width: 90px;
+        height: 90px;
+        margin: 10px auto 0px;
+    }
+
+ 
+
+
+
+     .googlemap {
+        position: relative;
+        width: 100%;
+        height: 0px;
+        padding-top: 75%;
+    }
+
+    .googlemap iframe {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+    }
+
+
+   
