--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ a {
     text-decoration: none;
 }
 
+body { overflow-x: hidden;}
+
 .bg-switcher {
 width: 100vw;
 height: 75vh;
@@ -139,10 +141,16 @@ h2 {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height: 90vh;
-    width: 90%;
-    margin: 0 auto;
-    padding-bottom: 50px;
+}
+
+.course-frame-inner {
+    max-width: 1200px;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    margin-bottom: 50px;
 }
 
 .particles-js-canvas-el {
@@ -158,16 +166,24 @@ h2 {
 } */
 
 .course-box{
+    width: 180px;
+    height: 280px;
     background-color: #ffffff;
+    margin: 20px 10px 10px;
     border-radius: 8px;
-    text-align: center;
-    width: 13vw;
-    height: 18vw;
-    padding: 28px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin: 1vw;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
     z-index: 10;
+}
+
+.course-img{
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items:center;
 }
 
 .course-box a {
@@ -187,12 +203,9 @@ h2 {
     box-shadow: #858c8e 0px 2px 15px 2px;
 }
 
-.course-img{
-    height:70%;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    margin:0px 15px;
+.course-box p{
+    text-align: center;
+    padding-top: 20px;
 }
 
 #html{
@@ -314,12 +327,17 @@ footer p{
 
     .intro_1 {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
         margin-bottom: 30px;
-        flex-wrap: wrap;
         font-size: 13px;
     }
+
+    .second {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
      .intro1-caption{
         margin: 20px;
         display: flex;
@@ -337,23 +355,17 @@ footer p{
     }
 
     .intro2 {
-        width: 100%;
-        margin-bottom: 20px;
         line-height: 2;
     }
      .intro_1 img {
-        width: 200px;
-        flex-wrap: wrap-reverse;
+        width: 100%;
      }
 
 
      .intro_1 p {
-        font-size: 13px;
-        line-height: 26px;
-        width: 302px;
+        width: 90%;
         margin: 0 auto;
-        margin-bottom: 30px;
-        text-align-last: left;
+        font-size: 14px;
      }
 
      #intro{
@@ -372,10 +384,47 @@ footer p{
         display: block;
      }
 
-     .course_img {
+     .course-container{
+        max-width: 1200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-bottom: 50px;
+     }
+
+     .course-box{
+        width: 140px;
+        height: 200px;
+        background-color: #ffffff;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        margin: 10px 10px 20px;
+        z-index: 10;
+    }
+
+    .course-box a {
+        width: 100%;
+        margin: 15px auto;
+        font-size: 12px;
+    }
+
+     .course_img img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .course-img{
         width: 90px;
         height: 90px;
-        margin: 10px auto 0px;
+        margin: 10px auto 0;
+    }
+
+    .course p {
+        font-size: 14px;
+        margin: 0;
     }
 
  
@@ -396,17 +445,6 @@ footer p{
         width: 100%;
         height: 100%;
     }
-
-
-
-
-
-
-
-
-
-
-
 
     }
 
